--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       
       <div class="text-container">
         <h1 class="display-4">Hi, I'm AndreSkin</h1>
-        <p class="lead">Currently studying Computer Science MSc at the University of Bologna</p>
+        <p class="lead">Computer Science MSc student at the University of Bologna</p>
+        <p class="lead">Currently on Erasmus at Bielefeld University.</p>
       </div>
 
     </div>
@@ -64,6 +65,19 @@
         <li>Programming</li>
       </ul>
     </div>
+  </section>
+
+    <section id="publications" class="bg-dark text-white">
+    <div class="container">
+      <h2 class="text-center">Publication</h2>
+      <p  class="text-center">Here's the conference paper I co-authored:</p>
+          <p class="text-center cit">
+          Paolo Ciancarini, Andrea Loretti, Marcello Missiroli, <b>Andrea Schinoppi</b>,<br>
+          <em>Training students to choose their agile practices and tools</em>, <br>
+          For <a href="https://ieeexplore.ieee.org/document/10229420">IEEE</a> <a href="https://conf.researchr.org/home/cseet-2023">CSEE&T 2023 </a> conference.
+          <br> &nbsp;
+        </p>
+     </div>
   </section>
 
   <section id="projects" class="bg-dark text-white">
