--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@
       <p class="text-center">Here's a selection of projects I took part into during univeristy courses:</p>
 
       <div class="container proj">
+        <h3> <a href="https://github.com/AndreSkin/DDRUM" >DDRUM: Drugs, Diseases, RDF Und MeSH</a></h3>
+        <p>A Turtle based database which intgrates data from <a href="https://clinicaltrials.gov/">ClinicalTrials</a>, <a href="https://drugcentral.org/">DrugCentral</a>
+          and <a href="https://www.ncbi.nlm.nih.gov/mesh/">MeSH</a>.&nbsp; </p>
         <h3><a href="https://github.com/AndreSkin/progetto_TwittEarth" >TwittEarth</a></h3>
         <p>A Twitter client developed for the Software Engeneering course.</p>
         <h3> <a href="https://github.com/AndreSkin/progetto_PandOs" >PandOS</a></h3>
-        <p>Queue manager, kernel and support level for <a href="http://wiki.virtualsquare.org/#!education/pandos.md" > didactic operative system</a> PandOS.</p>
+        <p>Queue manager, kernel and support level for <a href="https://wiki.virtualsquare.org/#/education/pandos" > didactic operative system</a> PandOS.</p>
         <h3> <a href="https://github.com/AndreSkin/progetto_deblur" >Image deblur</a></h3>
         <p>Image deblurring using Python for the Numerical Computing course. </p>
         <h3> <a href="https://github.com/AndreSkin/progetto_movida" >Movida</a></h3>
         <p>MOVIes Data and Algorithms: movie database manager using sorting algorithms and trees in Java.</p>
-        <h3> <a href="https://github.com/AndreSkin/progetto_car-race" >Car race</a></h3>
-        <p>The very first project I worked on: a C++ ASCII car game.<br> &nbsp; </p>
     </div>
 
     </div>
