--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="AndreSkin's personal page, MSc CS student">
+  <meta name="description" content="AndreSkin's personal page, MSc CS graduate">
 
   <title>AndreSkin.it</title>
   <link rel="icon" type="image/x-icon" href="./media/favicon.ico">
@@ -42,21 +42,21 @@
     <div class="container d-flex align-items-center justify-content-center">
       
       <div class="image-container">
-        <img src="media/my_photo.jpg" class="myphoto" alt="My photo">
+        <img src="media/my_photo.jpg" class="myphoto" alt="Photo of AndreSkin">
       </div>
       
       <div class="text-container">
         <h1 class="display-4">Hi, I'm AndreSkin</h1>
-        <p class="lead">Computer Science MSc student at the University of Bologna</p>
+        <p class="lead">Computer Science MSc graduate at the University of Bologna</p>
       </div>
 
     </div>
   </header>
   
 
-  <section id="about" class="bg-dark text-white">
+  <section id="about" class="bg-dark text-white" role="region" aria-labelledby="about-heading">
     <div class="container">
-      <h2 class="text-center">Things I like</h2>
+      <h2 id="about-heading" class="text-center">Things I like</h2>
       <ul class="text-center">
         <li>Digital forensics</li>           
         <li>European computer law</li>
@@ -66,10 +66,10 @@
     </div>
   </section>
 
-    <section id="publications" class="bg-dark text-white">
+    <section id="publications" class="bg-dark text-white" role="region" aria-labelledby="publications-heading">
     <div class="container">
-      <h2 class="text-center">Publication</h2>
-      <p  class="text-center">Here's the conference paper I co-authored:</p>
+      <h2 id="publications-heading" class="text-center">Publication</h2>
+      <p class="text-center">Here's the conference paper I co-authored:</p>
           <p class="text-center cit">
           Paolo Ciancarini, Andrea Loretti, Marcello Missiroli, <b>Andrea Schinoppi</b>,<br>
           <em>Training students to choose their agile practices and tools</em>, <br>
@@ -79,9 +79,9 @@
      </div>
   </section>
 
-  <section id="projects" class="bg-dark text-white">
+  <section id="projects" class="bg-dark text-white" role="region" aria-labelledby="projects-heading">
     <div class="container">
-      <h2 class="text-center">University projects</h2>
+      <h2 id="projects-heading" class="text-center">University projects</h2>
       <p class="text-center">Here's a selection of projects I took part into during univeristy courses:</p>
 
       <div class="container proj">
@@ -102,9 +102,9 @@
   </section>
 
 
-  <section id="contact" class="bg-dark text-white">
+  <section id="contact" class="bg-dark text-white" role="region" aria-labelledby="contact-heading">
     <div class="container icons">
-      <h2 class="text-center">Contacts</h2>
+      <h2 id="contact-heading" class="text-center">Contacts</h2>
       <NOSCRIPT>
         You need to enable JavaScript to see email. <br> 
       </NOSCRIPT>
