--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="AndreSkin's personal page, MSc CS graduate">
 
-  <title>AndreSkin.it</title>
+  <title>AndreSkin</title>
   <link rel="icon" type="image/x-icon" href="./media/favicon.ico">
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -102,12 +102,17 @@
 
     <section id="publications" class="bg-dark text-white" role="region" aria-labelledby="publications-heading">
     <div class="container">
-      <h2 id="publications-heading" class="text-center">Publication</h2>
-      <p class="text-center">Here's the conference paper I co-authored:</p>
+      <h2 id="publications-heading" class="text-center">Publications</h2>
+      <p class="text-center">Here's the papers I co-authored:</p>
           <p class="text-center cit">
           Paolo Ciancarini, Andrea Loretti, Marcello Missiroli, <b>Andrea Schinoppi</b>,<br>
           <em>Training students to choose their agile practices and tools</em>, <br>
           For <a href="https://ieeexplore.ieee.org/document/10229420">IEEE</a> <a href="https://conf.researchr.org/home/cseet-2023">CSEE&T 2023 </a> conference.
+        </p>
+        <p class="text-center cit">
+          Giacomo Vallasciani, <b>Andrea Schinoppi</b>, Pasquale Cascarano, Gustavo Marfia, Lorenzo Donatiello,<br>
+          <em>Handling privacy and security aspects in a collaborative AR session</em>, <br>
+          On <a href="https://ieeexplore.ieee.org/document/10765348">IEEE</a> <a href="https://ieeexplore.ieee.org/xpl/conhome/10765150/proceeding">ISMAR-Adjunct, 2024</a>.
         </p>
      </div>
   </section>
@@ -121,10 +126,10 @@
         <h3> <a href="https://github.com/AndreSkin/DDRUM" >DDRUM: Drugs, Diseases, RDF Und MeSH</a></h3>
         <p>A Turtle based database which intgrates data from <a href="https://clinicaltrials.gov/">ClinicalTrials</a>, <a href="https://drugcentral.org/">DrugCentral</a>
           and <a href="https://www.ncbi.nlm.nih.gov/mesh/">MeSH</a>.&nbsp; </p>
-        <h3><a href="https://github.com/AndreSkin/progetto_TwittEarth" >TwittEarth</a></h3>
-        <p>A Twitter client developed for the Software Engeneering course.</p>
         <h3> <a href="https://github.com/AndreSkin/progetto_PandOs" >PandOS</a></h3>
         <p>Queue manager, kernel and support level for <a href="https://wiki.virtualsquare.org/#/education/pandos" > didactic operative system</a> PandOS.</p>
+        <h3><a href="https://github.com/AndreSkin/progetto_TwittEarth" >TwittEarth</a></h3>
+        <p>A Twitter client developed for the Software Engeneering course.</p>
         <h3> <a href="https://github.com/AndreSkin/progetto_deblur" >Image deblur</a></h3>
         <p>Image deblurring using Python for the Numerical Computing course. </p>
         <h3> <a href="https://github.com/AndreSkin/progetto_movida" >Movida</a></h3>
